--- a/notebook/embed_image.ipynb
+++ b/notebook/embed_image.ipynb
@@ -2,26 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "6bace553",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import uuid\n",
+    "import numpy as np\n",
     "from PIL import Image\n",
     "from qdrant_client import QdrantClient\n",
     "from qdrant_client.http.models import PointStruct, VectorParams, Distance\n",
-    "import numpy as np\n",
-    "import uuid\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from pydantic import BaseModel\n",
-    "import warnings\n",
     "\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(override=True)\n",
+    "\n",
+    "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "dc2a1b0c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "f0a8a1c8",
    "metadata": {},
    "outputs": [],
@@ -74,19 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "dc9c885e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create an instance of QdrantClient and ImageEmbedder\n",
-    "qdrant_client = QdrantClient(url=\"http://localhost:6333\")\n",
+    "QDRANT_URL = os.getenv(\"QDRANT_URL\")\n",
+    "\n",
+    "qdrant_client = QdrantClient(url=QDRANT_URL)\n",
     "embedder = ImageEmbedder(client=qdrant_client, collection_name=\"cm-images\", model_name=\"clip-ViT-B-32\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "39e0d229",
    "metadata": {},
    "outputs": [],
@@ -106,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "id": "acb5742e",
    "metadata": {},
    "outputs": [],
@@ -116,18 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a4a4d546",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ใส่ข้อความที่ต้องการค้นหา\n",
-    "query_text = \" blueprint ไซต์ก่อสร้างอาคาร A\""
+    "query_text = \" blueprint \""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "id": "4d240902",
    "metadata": {},
    "outputs": [],
@@ -138,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "473b9547",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ค้นหาใน Qdrant (top-3 ที่ใกล้สุด)\n",
-    "hits = client.search(\n",
+    "hits = qdrant_client.search(\n",
     "    collection_name=\"images\",\n",
     "    query_vector=query_vec.tolist(),\n",
     "    limit=1\n",
@@ -153,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "id": "baf286f2",
    "metadata": {},
    "outputs": [
@@ -176,6 +182,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b7c3953d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35d02308",
    "metadata": {},
    "outputs": [],
    "source": []
